--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,6 +4,9 @@
     <string name="app_name">Time To Study</string>
     <string name="action_settings">Settings</string>
     <string name="test_menu">Tests</string>
+    <string name="check_answer">Check Answer</string>
+    <string name="results">Results</string>
+    <string name="test_path">Test Path</string>
     <string-array name="courseName">
         <item>FDCNC 350</item>
         <item>CIT 495</item>
